# ReceptorEmulatorTFG

./: .gitignore  Readme.md
IotEmulator/: CMakeLists.txt  sdkconfig
IotEmulator/components/rc522/include/driver/: rc522_spi.h
IotEmulator/components/rf69/: rf69.c  rf69.h
IotEmulator/main/: CMakeLists.txt  Main.c  Main.h
IotEmulator/main/DispositivesInterfaces/IRDevices/: IRDevices.c  IRDevices.h
IotEmulator/main/DispositivesInterfaces/IRDevices/AC/: ACControl.c  ACControl.h
IotEmulator/main/DispositivesInterfaces/IRDevices/LED/: LEDControl.c  LEDControl.h
IotEmulator/main/DispositivesInterfaces/IRDevices/Projector/: ProjectorControl.c  ProjectorControl.h
IotEmulator/main/DispositivesInterfaces/IRDevices/TV/: TVControl.c  TVControl.h
IotEmulator/main/DispositivesInterfaces/RFDevices/: RFDevices.c  RFDevices.h
IotEmulator/main/DispositivesInterfaces/RFIDDevices/: RFIDDevices.c  RFIDDevices.h
IotEmulator/main/ESPNOW/: EspNowHandler.c  EspNowHandler.h  espNow.c  espNow.h
IotEmulator/main/IR/: IRManager.c  IRmanager.h
IotEmulator/main/IR/IREncoder/: ir_nec_encoder.h
IotEmulator/main/IR/Receive/: ReceiveIR.c  ReceiveIR.h
IotEmulator/main/Mqtt/: MqttHandler.c  MqttHandler.h  MqttPublishMethods.c  MqttPublishMethods.h
IotEmulator/main/RF/: mainRF.c  mainRF.h
IotEmulator/main/RF/Receiver/: receiver.c  receiver.h
IotEmulator/main/RFID/: rfidmanager.c  rfidmanager.h
IotEmulator/main/RFID/Read/: readRFID.c  readRFID.h
